# LATTICE-FLUX-256

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
apps/: bootstrap.py  network_chat.py  storage_gui.py  vault.py
docs/: TECH.md
examples/: string_envelope_demo.py
src/lf256/: __init__.py  __main__.py  crypto_utils.py  engine.py
tests/: test_lf256.py
