[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lf256"
version = "2.1.0"
description = "Lattice Flux 256 - time-varying Ring-LWE hybrid crypto (experimental)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nizarski" }]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lf256-verify = "lf256.__main__:main"
